<resources>
    <string name="app_name">Movie Tix</string>
    <string name="splash_image">Splash Image</string>
    <string name="splash_content">Skip the lines, grab your seats. This app puts the magic of movies at your fingertips, letting you book tickets effortlessly. Your next cinematic adventure is just a tap away.</string>
    <string name="welcome_text">Welcome!</string>
    <string name="button_cont">Get Started</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_text">Dont have an account? Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="Login_text">Cinematic experience awaits!!</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_text">Already have an account? Sign In</string>
    <string name="profile_text">Profile</string>
    <string name="primary_account">Primary account</string>
    <string name="search_for_movies">Search for movies</string>
    <string name="top_movies">Top movies</string>
    <string name="see_all">See all</string>
    <string name="upcoming_movies">Upcoming movies</string>
    <string name="explorer">Explorer</string>
    <string name="favorite">Favorite</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="book_ticket">Book Ticket</string>
    <string name="seat_selection">Seat Selection</string>
    <string name="available">Available</string>
    <string name="selected">Selected</string>
    <string name="unavailable">Unavailable</string>
    <string name="tickets">Tickets</string>
    <string name="favorites">Favorites</string>
    <string name="booked_tickets">Booked Tickets</string>
    <string name="no_favorites_added_yet">No favorites added yet!</string>
    <string name="no_tickets_booked">No Tickets Booked!</string>
    <string name="book_tickets">Book Tickets</string>
    <string name="username">Username</string>
    <string name="logout">Logout</string>
</resources>