<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SignInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="25dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ticket_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/Login_text"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/log_in"
                android:textSize="42sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Email_ID"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/email"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:paddingEnd="10dp" />

            <EditText
                android:id="@+id/Password_text"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/password"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="10dp" />

            <Button
                android:id="@+id/Login_button"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/Buttons"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Register_button"
                android:layout_width="wrap_content"
                android:layout_height="48sp"
                android:clickable="true"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/register_text"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>