<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:maxWidth="438dp"
    android:maxHeight="1000dp"
    tools:context=".Activity.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/app_name"
            android:textSize="42sp"
            android:textStyle="bold"
            android:layout_marginVertical="10dp"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/splash_image"
            app:srcCompat="@drawable/launch_image"
            android:layout_marginVertical="20dp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/welcome_text"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginVertical="20dp"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/splash_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginVertical="20dp"/>

        <Button
            android:id="@+id/start_button"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/Buttons"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/button_cont"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginVertical="20dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>